# CTOK

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: ZED.cmake  pcre2.cmake
include/ctok/: tokenizer.h
src/: CMakeLists.txt  tokenizer.c
tests/: CMakeLists.txt  test_tokenizer.c
